force-app/main/default/objects/BankAccount__c/BankAccount__c.object-meta.xml
<CustomObject>
    <label>口座・現金帳</label>
    <nameField>
        <displayFormat>BA-{000000}</displayFormat>
        <label>BANK ACC ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>