force-app/main/default/objects/BankAccount__c/fields/BankACAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>BankACAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BANK A/C ACCOUNTING CODE</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipLabel>BANK A/C ACCOUNTING CODE</relationshipLabel>
    <relationshipName>BankACAccountingCode</relationshipName>
    <type>Lookup</type>
</CustomField>