force-app/main/default/objects/BankAccount__c/fields/BankAccountCurrency__c.field-meta.xml
<CustomField>
    <fullName>BankAccountCurrency__c</fullName>
    <label>BANK ACCOUNT CURRENCY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>