force-app/main/default/objects/BankAccount__c/fields/BankAccountNameInLocal__c.field-meta.xml
<CustomField>
    <fullName>BankAccountNameInLocal__c</fullName>
    <label>BANK ACCOUNT NAME IN LOCAL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>