force-app/main/default/objects/BankAccount__c/fields/BankAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>BankAccountNumber__c</fullName>
    <label>BANK ACCOUNT NUMBER</label>
    <length>30</length>
    <type>Text</type>
</CustomField>