force-app/main/default/objects/BankAccount__c/fields/BankAccountType__c.field-meta.xml
<CustomField>
    <fullName>BankAccountType__c</fullName>
    <label>BANK ACCOUNT TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Joint Account Holder</fullName>
            </value>
            <value>
                <fullName>Local Corporate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>