force-app/main/default/objects/BankAccount__c/fields/BankAddress__c.field-meta.xml
<CustomField>
    <fullName>BankAddress__c</fullName>
    <label>BANK ADDRESS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>