force-app/main/default/objects/BankAccount__c/fields/BankBranchName__c.field-meta.xml
<CustomField>
    <fullName>BankBranchName__c</fullName>
    <label>BANK BRANCH NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>