force-app/main/default/objects/BankAccount__c/fields/BankCity__c.field-meta.xml
<CustomField>
    <fullName>BankCity__c</fullName>
    <label>Bank City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>City_Province</valueSetName>
    </valueSet>
</CustomField>