force-app/main/default/objects/BankAccount__c/fields/BankInfoInLedger__c.field-meta.xml
<CustomField>
    <fullName>BankInfoInLedger__c</fullName>
    <formula>BankACAccountingCode__r.Name
&amp;&quot;:&quot;&amp;text(BankAccountCurrency__c)&amp;&quot;-&quot;&amp; BankAccountNumber__c &amp;&quot;-&quot;&amp;  BankOfficialName__c</formula>
    <label>BANK INFO IN LEDGER</label>
    <type>Text</type>
</CustomField>