force-app/main/default/objects/BankAccount__c/fields/BankMaster__c.field-meta.xml
<CustomField>
    <fullName>BankMaster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BANK NAME</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>BANK_ACCOUNT</relationshipName>
    <type>Lookup</type>
</CustomField>