force-app/main/default/objects/BankAccount__c/fields/BankShortAddress__c.field-meta.xml
<CustomField>
    <fullName>BankShortAddress__c</fullName>
    <label>BANK SHORT ADDRESS</label>
    <type>TextArea</type>
</CustomField>