force-app/main/default/objects/BankAccount__c/fields/BranchPincode__c.field-meta.xml
<CustomField>
    <fullName>BranchPincode__c</fullName>
    <label>Branch Pin code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>