force-app/main/default/objects/BankAccount__c/fields/FullNameOfAccountHolder__c.field-meta.xml
<CustomField>
    <fullName>FullNameOfAccountHolder__c</fullName>
    <label>FULL NAME OF ACCOUNT HOLDER</label>
    <length>50</length>
    <type>Text</type>
</CustomField>