force-app/main/default/objects/BankAccount__c/fields/InternalBankAccount__c.field-meta.xml
<CustomField>
    <fullName>InternalBankAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal Bank Account</label>
    <type>Checkbox</type>
</CustomField>