force-app/main/default/objects/BankAccount__c/fields/InternetBankingID__c.field-meta.xml
<CustomField>
    <fullName>InternetBankingID__c</fullName>
    <label>INTERNET BANKING ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>