force-app/main/default/objects/BankAccount__c/fields/InternetBankingIssuedDate__c.field-meta.xml
<CustomField>
    <fullName>InternetBankingIssuedDate__c</fullName>
    <label>INTERNET BANKING ISSUED DATE</label>
    <type>Date</type>
</CustomField>