force-app/main/default/objects/BankAccount__c/fields/InternetBankingURL__c.field-meta.xml
<CustomField>
    <fullName>InternetBankingURL__c</fullName>
    <label>INTERNET BANKING URL</label>
    <type>Url</type>
</CustomField>