force-app/main/default/objects/BankAccount__c/fields/RegisteredBusinessLicenseNo__c.field-meta.xml
<CustomField>
    <fullName>RegisteredBusinessLicenseNo__c</fullName>
    <label>REGISTERED BUSINESS LICENSE NUMBER</label>
    <length>30</length>
    <type>Text</type>
</CustomField>