force-app/main/default/objects/BankAccount__c/recordTypes/BankAccount.recordType-meta.xml
<RecordType>
    <fullName>BankAccount</fullName>
    <active>true</active>
    <description>To manage Bank Account</description>
    <label>BANK ACCOUNT</label>
</RecordType>