force-app/main/default/objects/BankAccount__c/recordTypes/Cashbook.recordType-meta.xml
<RecordType>
    <fullName>Cashbook</fullName>
    <active>true</active>
    <description>To manage Cash Book</description>
    <label>CASH BOOK</label>
</RecordType>