force-app/main/default/objects/BankAccount__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>InternalBankAccount__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>BankMaster__c</columns>
    <columns>BankAccountCurrency__c</columns>
    <columns>BankAccountNameInEng__c</columns>
    <columns>BankBranchName__c</columns>
    <columns>BankAccountNumber__c</columns>
    <columns>BankAccountNameInLocal__c</columns>
    <columns>BankAccountType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>